tests/Checker/everything/errors/13b.vc
int main() {
    boolean a[] = {1};
    return 1;
}
